# CudaCompute

./: CMakeLists.txt  gpu.txt  reduce_no_bank_conflict.txt  reduce_shared_memory.txt
profile/: gpu.txt
src/: common.cpp  common.h  gemm.cu  transpose.cu
src/common/: common.cpp  common.h
src/reduce/: CMakeLists.txt  reduce.cu
src/vecadd/: CMakeLists.txt  vecadd.cu
